--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "sass-resources-loader": "^1.3.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "zepto": "^1.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
