--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "html-withimg-loader": "^0.1.16",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "muse-ui": "^2.1.0",
